tdf#111790: Shadow imported from a PPTX file is not overriden

by the settings while saving back to PPTX

Change-Id: I958f1987d0123bcf89ef37b13807f407781f3c15
Reviewed-on: https://gerrit.libreoffice.org/45989
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>